--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.euromoby</groupId>
+			<artifactId>agent-common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>	
+		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>1.0.13</version>
