--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,11 @@
 			<version>2.2.4</version>
 		</dependency>
 		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3</version>
+		</dependency>
+		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
@@ -145,7 +150,11 @@
 			<artifactId>httpclient</artifactId>
 			<version>4.4</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpmime</artifactId>
+			<version>4.4</version>
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
